apps/nginx/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.kube.local.gd`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls: {}
